# yip-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  LICENSE  README.md  USAGE.md  build.rs
.github/workflows/: build.yml  ci.yml  release.yml
docs/: adding-a-plugin.md  configuration-reference.md  migrating-from-go-yip.md  testing.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/conditionals/: if_arch.rs  if_cond.rs  if_files.rs  if_service_manager.rs  mod.rs  node.rs  only_if_os.rs  only_if_os_version.rs
src/console/: console.rs  mod.rs
src/executor/: default.rs  executor.rs  mod.rs
src/plugins/: commands.rs  datasource.rs  directories.rs  dns.rs  download.rs  entities.rs  environment.rs  files.rs  git.rs  hostname.rs  layout.rs  mod.rs  modules.rs  package_pins.rs  packages.rs  ssh.rs  sysctl.rs  systemctl.rs  systemd_firstboot.rs  timesyncd.rs  unpack_image.rs  user.rs
src/schema/: config.rs  datasource.rs  dns.rs  dot_notation.rs  file.rs  git.rs  if_files.rs  layout.rs  mod.rs  packages.rs  stage.rs  systemctl.rs  unpack.rs  user.rs
src/template/: engine.rs  funcs.rs  mod.rs  sysdata.rs
src/vfs/: mem.rs  mod.rs  real.rs  temp.rs  tests_common.rs  vfs.rs
tests/: cli.rs  executor.rs  kairos_configs.rs  yaml_parse.rs
tests/fixtures/: smoke.yaml
