[package]
name = "yip"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Rust port of mudler/yip — cloud-init-style YAML stage executor"
repository = "https://github.com/kairos-io/yip-rs"
readme = "README.md"
build = "build.rs"

[lib]
name = "yip"
path = "src/lib.rs"

[[bin]]
name = "yip"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
nix = { version = "0.30", features = ["fs", "mount", "process", "user", "signal"] }
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "stream"], default-features = false }
url = "2"
shlex = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4", "v5"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
toml = "0.8"
petgraph = "0.8"
scopeguard = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
walkdir = "2"

# Templating: tera covers most of sprig's surface — we'll add custom funcs for the rest.
tera = { version = "1", default-features = false }

# jq queries (gojq replacement)
jaq-core = "1"
jaq-std = "1"
jaq-interpret = "1"
jaq-parse = "1"
jaq-syn = "1"

# .env file parsing — yip-rs vendors a tiny parser in src/utils/dotenv.rs.

# Git: gix is feature-gated so we can also shell out if size matters.
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest"], optional = true }

# OCI image pull/unpack
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
tar = "0.4"
flate2 = "1"

# Password hashing for `users` plugin (yescrypt/sha512crypt as Linux uses)
sha-crypt = "0.5"

[features]
default = ["git-builtin", "oci-builtin"]
git-builtin = ["dep:gix"]
oci-builtin = ["dep:oci-distribution"]
# Disable both to get a smaller binary that shells out to `git` / `skopeo` instead.
nogit = []
nounpack = []

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
predicates = "3"
indoc = "2"
mockito = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
